Fix: settings menu wrong width on mobile

--- a/src/app/settings/menu/menu.component.scss
+++ b/src/app/settings/menu/menu.component.scss
@@ -1,9 +1,12 @@
 @import "../../../variables.scss";
 
-aside
+:host
 {
     grid-area: aside;
+}
 
+aside
+{
     a
     {
         display: block;
